# image_detection

./: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  hello.py  pyproject.toml
Api/: Dockerfile  Makefile  api.py  pyproject.toml
Api/Resources/: ImageDetection.py
Client/: Dockerfile  client.html
api/: Dockerfile  Makefile  api.py  pyproject.toml  requirements.txt  secret_generate.py
app/: Dockerfile  __init__.py  api.py  requirements.txt
app/resources/: image_detection.py
app/templates/: client.html
client/: Dockerfile
